version/0.40/_sources/api/solver/_autosummary/settings/run_calculation.rst.txt
:orphan:

.. _run_calculation:

run_calculation
===============

.. autoclass:: ansys.fluent.core.generated.solver.settings_261.run_calculation
    :show-inheritance:

.. rubric:: Attributes

==========================================================================   =============================================================

Attribute                                                                                                                          Summary

==========================================================================   =============================================================
:ref:`parameters <parameters_9>`                                                                              Iteration parameters object.

:ref:`pseudo_time_settings <pseudo_time_settings>`                                                          The pseudo time method object.

:ref:`adaptive_time_stepping <adaptive_time_stepping>`                                                      Adaptive time stepping object.

:ref:`cfl_based_adaptive_time_stepping <cfl_based_adaptive_time_stepping>`                        CFL-based adaptive time stepping object.

:ref:`solution_steering <solution_steering>`                                            Enable solution steering for density-based solver.

:ref:`time_step_count <time_step_count_1>`                                                                                  The time step.

:ref:`transient_controls <transient_controls>`                                                                  Transient controls object.

:ref:`options <options_14>`                                                      Options for time stepping and extrapolation of variables.

:ref:`pollutants <pollutants>`                                                                                          Pollutants object.

:ref:`data_sampling <data_sampling>`                                                                                 Data sampling object.

:ref:`data_sampling_options <data_sampling_options>`                                   Zone-Specific Data sampling options for statistics.

:ref:`residual_verbosity <residual_verbosity>`                                                              The residual report verbosity.

:ref:`compute_resources <compute_resources>`                                                                        Compute Resource List.

:ref:`remote_compute <remote_compute>`                                                                            Remote Compute Settings.

==========================================================================   =============================================================

.. rubric:: Methods

============================================   =============================================

Method                                                                               Summary

============================================   =============================================
:ref:`calculate <calculate>`                                          Start run calculation.

:ref:`interrupt <interrupt>`                                       Interrupt the iterations.

:ref:`dual_time_iterate <dual_time_iterate>`                    Perform unsteady iterations.

:ref:`iterate <iterate>`                           Perform a specified number of iterations.

============================================   =============================================

.. rubric:: Included in:

==========================   =======================================================================================================================================

Parent                                                                                                                                                       Summary

==========================   =======================================================================================================================================
:ref:`solution <solution>`       Provides access to settings like solver controls, initialization, monitors, solution methods and others for running the simulation.

==========================   =======================================================================================================================================

